@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Geo-GoogleEarth-Document
-version:      0.05
+version:      0.06
 version_from: lib/Geo/GoogleEarth/Document.pm
 installdirs:  site
 requires:
