@@ -5,7 +5,7 @@ use XML::Simple qw{};
 
 BEGIN {
     use vars qw($VERSION);
-    $VERSION     = '0.05';
+    $VERSION     = '0.06';
 }
 
 =head1 NAME
