@@ -7,7 +7,7 @@ use Geo::GoogleEarth::Document::NetworkLink;
 
 BEGIN {
     use vars qw($VERSION);
-    $VERSION     = '0.05';
+    $VERSION     = '0.06';
 }
 
 =head1 NAME
