@@ -3,6 +3,7 @@ Revision history for Perl module Geo::GoogleEarth::Document
 0.05 2007-09-17
     - updated documentation
     - fixed Placemark->adddress type-o
+    - added Placemark->address test
 
 0.04 2007-09-17
     - updated documentation
